tests/compile/userdata_getter_async.stderr
error: async field getter is not supported
 --> tests/compile/userdata_getter_async.rs:9:5
  |
9 |     async fn value(&self) -> Result<u64> {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `mlua::Result`
 --> tests/compile/userdata_getter_async.rs:1:5
  |
1 | use mlua::Result;
  |     ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
